# cc-templates

./: LICENSE  README.md
.devcontainer/: devcontainer.json
Python/: README.md
Python/simple/: cookiecutter.json
Python/simple/{{cookiecutter.__project_slug}}/: CONTRIBUTING.md  setup.cfg
Python/simple/{{cookiecutter.__project_slug}}/test/: conftest.py  test_module.py
