[metadata]
name = {{cookiecutter.__project_slug}}
version = 0.0.1-alpha
description = {{cookiecutter.description}}
license = MIT

[options]
packages = find:
python_requires = >={{cookiecutter.min_python_version}}
install_requires =
    typing-extensions

[options.extras_require]
dev =
    black
    pytest

[options.packages.find]
exclude =
    test*